--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,5 @@
-<h1>"Hello!"</h1>
+<div class = "container">
+  <h1>Hello!</h1>
+  <p>Choose the option you want to play with!</p>
+  <p>Scissors beats paper! Rock beats scissors! Paper beats rock!</p>
+</div>
