--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,7 @@
     <nav>
       <ul>
         <li><a href = "/home"> Home </a></li>
+        <li><a href = "/play"> Play game </a></li>
       </ul>
     </nav>
     <%= yield %>
